# betterscale-tools

./: .gitignore  Cargo.toml  README.md
examples/: zerostate-config.json
src/: dht.rs  ed25519.rs  main.rs  mine.rs  models.rs  zerostate.rs
src/config/: mod.rs
src/mine/: mod.rs
src/system_accounts/: config_code.boc  giver_state.boc  minter_state.boc  mod.rs  multisig2_code.boc  setcode_multisig_code.boc  tick_tock_state.boc
src/zerostate/: config_state.boc  elector_code.boc  elector_state.boc  mod.rs  models.rs  multisig_code.boc  system_accounts.rs
