[package]
name = "betterscale-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "betterscale"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
argh = "0.1"
base64 = "0.13"
curve25519-dalek-ng = "4.1"
generic-array = { version = "0.14", features = ["more_lengths"] }
hex = "0.4"
num-bigint = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
thiserror = "1.0"
tl-proto = "0.1"

nekoton-utils = { git = "https://github.com/broxus/nekoton.git" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
ton_types = { git = "https://github.com/broxus/ton-labs-types.git" }
